--- a/mod2-sol.css
+++ b/mod2-sol.css
@@ -21,6 +21,9 @@ h1{
 	margin-top: 20px;
 	margin-bottom: 35px;
 }
+h2{
+	text-align: right;
+}
 div.col-lg-1{
   background-color: rgba(211,211,211,0.33);
   width: 90%;
