--- a/mod2-sol.css
+++ b/mod2-sol.css
@@ -25,9 +25,10 @@ h2{
 	margin-top: 15px;
 	margin-bottom: 15px;
 	float: right;
+	margin-right: auto;
 	position: relative;
 	text-align: center;
-	padding-right: 15px;
+	padding-right: 20px;
 	padding-left: 10px;
 	border: 2px solid white;
 }
