--- a/mod2-sol.css
+++ b/mod2-sol.css
@@ -32,6 +32,17 @@ h2{
 	padding-left: 10px;
 	border: 2px solid white;
 }
+a{
+	color: black;
+	text-decoration: none;
+}
+a:hover{
+	font-size: 120%;
+	color: white;
+}
+a:active {
+  color: yellow;
+} 
 p{
 	clear: right;
 }
